# BulletHell

./: .gitignore  Bullet_Hell.sln  CMakeLists.txt  LICENSE.txt  README.md  pack_assets.bat
Asset_Packer/: Asset_Packer.vcxproj  Asset_Packer.vcxproj.filters
Asset_Packer/src/: FileUtils.cpp  FileUtils.h  Main.cpp  PackerConstants.cpp  Portability.h
Asset_Packer/src/Debugging/: CriticalSection.h  Logger.cpp  Logger.h
Asset_Packer/src/Images/: ImageConverter.cpp
Asset_Packer/src/Models/: MeshConverter.cpp  MeshConverter.h  MeshData.cpp  MeshData.h  Node.cpp  Node.h  RawMaterial.cpp  RawMaterial.h  RawMeshData.cpp  RawMeshData.h
Bullet_Hell/: Bullet_Hell.vcxproj  Bullet_Hell.vcxproj.filters
Bullet_Hell/src/AI/: AIState.h  Brain.cpp  Brain.h
Bullet_Hell/src/Debugging/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
Bullet_Hell/src/Entities/: Bullet.cpp  Bullet.h  Pawn.cpp  Pawn.h  PawnManager.cpp  PawnManager.h
Bullet_Hell/src/Event/: ChunkLoaded.cpp  ChunkLoaded.h  Event.h  EventHandlers.cpp  EventHandlers.h  (+2 more)
asset_packer/: CMakeLists.txt
asset_packer/include/images/: image_converter.h
asset_packer/include/models/: node.h  raw_mesh_data.h
asset_packer/src/: file_utils.cpp  main.cpp  packer_constants.cpp
asset_packer/src/images/: image_converter.cpp
asset_packer/src/models/: mesh_converter.cpp  node.cpp
asset_packer_temp/src/: file_utils.h  main.cpp  packer_constants.h  portability.h
bullet_hell/: CMakeLists.txt
bullet_hell/include/ai/: ai_state.h  brain.h
bullet_hell/include/debugging/: timer.h
bullet_hell/include/entities/: bullet.h  pawn.h  pawn_manager.h
bullet_hell/include/event/: event.h  event_manager.h
bullet_hell/include/event/map/: chunk_loaded.h  chunk_unloaded.h
bullet_hell/include/graphics/: mouse_input.h  window.h
bullet_hell/include/graphics/backend/base/: debug_info.h  format_mapper.h  pipeline_manager.h  render_stage.h  shader_map.h  uniforms_map.h
bullet_hell/include/graphics/backend/opengl/: command_buffers.h  gui_mesh.h  quad_mesh.h  render_buffers.h
bullet_hell/include/graphics/backend/opengl/stages/: animation_render.h  debug_render.h  filter_render.h  framebuffer_transition.h  gui_render.h  light_render.h  model_matrix_update.h  scene_render.h  shadow_render.h  skybox_render.h
bullet_hell/include/graphics/frontend/: attachment.h  backend_type.h  buffer.h  deletion_queue.h  framebuffer.h  image_format.h  image_layout.h  instance.h  pipeline.h  render_config.h  render_stage.h  shader.h  shader_map.h  texture.h  texture_loader.h
bullet_hell/include/graphics/graph/: animation_resource.h  array_of_textures.h  cascade_shadow_slice.h  gbuffer.h  gui_mesh.h  icon_resource.h  material.h  material_resource.h  mesh_draw_data.h  model.h  model_resource.h  quad_mesh.h  shader_program.h  shadow_buffer.h  texture.h  texture_resource.h  uniforms_map.h
bullet_hell/include/graphics/gui/: debug_ui.h  ui.h
bullet_hell/include/graphics/render/: animation_render.h  command_buffers.h  debug_render.h  filter_render.h  gui_render.h  light_render.h  render.h  scene_render.h  shadow_render.h  sky_box_render.h
bullet_hell/include/graphics/scene/: animation_data.h  camera.h  entity.h  fog.h  projection.h  scene.h  scene_cluster.h  sky_box.h
bullet_hell/include/graphics/scene/lights/: ambient_light.h  directional_light.h  point_light.h  scene_lights.h  spot_light.h
bullet_hell/include/main/: game_logic.h  game_options.h
bullet_hell/include/map/: chunk.h  game_map.h  map_generator.h  tile.h
bullet_hell/include/memory/: concurrent_queue.h  critical_section.h
bullet_hell/include/resource_cache/: default_resource_loader.h  resource.h  resource_cache.h  resource_handle.h  resource_loader.h  resource_zip_file.h
bullet_hell/include/utilities/: math_util.h  opengl_util.h  string_util.h
bullet_hell/src/ai/: brain.cpp
bullet_hell/src/debugging/: timer.cpp
bullet_hell/src/entities/: bullet.cpp  pawn.cpp  pawn_manager.cpp
bullet_hell/src/event/: event_manager.cpp
bullet_hell/src/event/map/: chunk_loaded.cpp  chunk_unloaded.cpp
bullet_hell/src/graphics/: mouse_input.cpp  window.cpp
bullet_hell/src/graphics/backend/opengl/: buffer.cpp  command_buffers.cpp  debug_info.cpp  format_mapper.cpp  gui_mesh.cpp  opengl_instance.cpp  pipeline.cpp  pipeline_manager.cpp  quad_mesh.cpp  render_buffers.cpp  shader.cpp  texture_loader.cpp  uniforms_map.cpp
bullet_hell/src/graphics/backend/opengl/stages/: animation_render.cpp  debug_render.cpp  filter_render.cpp  framebuffer_transition.cpp  gui_render.cpp  light_render.cpp  model_matrix_update.cpp  scene_render.cpp  shadow_render.cpp  skybox_render.cpp
bullet_hell/src/graphics/frontend/: deletion_queue.cpp  shader_map.cpp
bullet_hell/src/graphics/graph/: animation_resource.cpp  array_of_textures.cpp  cascade_shadow_slice.cpp  gbuffer.cpp  gui_mesh.cpp  icon_resource.cpp  material.cpp  material_resource.cpp  mesh_data.cpp  mesh_draw_data.cpp  model.cpp  model_resource.cpp  quad_mesh.cpp  shader_program.cpp  shadow_buffer.cpp  texture.cpp  texture_resource.cpp  uniforms_map.cpp
bullet_hell/src/graphics/gui/: debug_ui.cpp  ui.cpp
bullet_hell/src/graphics/render/: animation_render.cpp  command_buffers.cpp  debug_render.cpp  filter_render.cpp  gui_render.cpp  light_render.cpp  render.cpp  render_buffers.cpp  scene_render.cpp  shadow_render.cpp  sky_box_render.cpp
bullet_hell/src/graphics/scene/: animation_data.cpp  camera.cpp  entity.cpp  fog.cpp  projection.cpp  scene.cpp  sky_box.cpp
bullet_hell/src/graphics/scene/lights/: ambient_light.cpp  directional_light.cpp  point_light.cpp  scene_lights.cpp  spot_light.cpp
bullet_hell/src/main/: game_logic.cpp  game_options.cpp  main.cpp
bullet_hell/src/map/: chunk.cpp  game_map.cpp  map_generator.cpp  tile.cpp
bullet_hell/src/resource_cache/: default_resource_loader.cpp  resource.cpp  resource_cache.cpp  resource_handle.cpp  resource_loader.cpp  resource_zip_file.cpp
bullet_hell/src/utilities/: math_util.cpp  opengl_util.cpp  portability.cpp  string_util.cpp
common/include/: globals.h  portability.h
common/src/: portability.cpp
(+207 files in other folders)
